# ollin

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  grammar.ebnf  main.ol  syntax.ol  syntax.tau  test.ol  test.tau
.claude/hooks/: session-start.sh
.github/workflows/: build-playground.yml  build.yml  deploy-docs.yml  pages.yml
bench/: bench_all.sh  bench_array.lua  bench_array.ol  bench_array.py  bench_calls.lua  bench_calls.ol  bench_calls.py  bench_fib.ol  bench_fib.py  bench_loop.lua  bench_loop.ol  bench_loop.py  bench_objects.lua  bench_objects.ol
build-wasm/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build_rel/: CMakeCache.txt  Makefile  cmake_install.cmake  tau
doc/: grammar.ebnf
docs/: app.js  cm-lang.js  cm-shared.js  fonts.css  grammar.ebnf  index.html  pg-crashlog.js  pg-format.js  pg-github.js  pg-run.js  pg-store.js  pg-viewport.js  playground.html  run.html
docs/samples/: camera.ol  closure.ol  colors.ol  cube_3d.ol  cube_tex.glb  data_demo.ol  fibonacci.ol  fizzbuzz.ol  game_of_life.ol  image_demo.ol  index.json  iso_camera.ol  joystick.ol  lignes_animees.ol  model_3d.ol  model_glb.ol  noise_field.ol  pixels.ol  primitives.ol  primitives_3d.ol  quat_drag.ol  quat_slerp.ol  rectangles.ol  sutom.ol  vec2.ol  view_distance.ol  voxel_world.ol
docs/views/: playground.html  playground.js  run.html  run.js  tutoriel.html  tutoriel.js
docs/wasm/: ollin.js  ollin.wasm
examples/: graphics_demo.ol  lines_demo.ol  sprite_demo.ol
ollin-vscode/: language-configuration.json
ollin-vscode/syntaxes/: ollin.tmLanguage.json
scripts/: bench_all.sh  bench_array.ol  bench_calls.ol  bench_fib.lua  bench_loop.ol  bench_objects.lua  bench_objects.ol  bench_objects.py  graphics_demo.ol  lines_demo.ol  prelude.ol  setup_deps.ps1  sprite_demo.ol  syntax.ol  test.ol  test_errors.sh  update_build_date.py
src/: array.cpp  array.h  ast.h  chunk.cpp  chunk.h  closure.h  color_module.cpp  compiler.cpp  compiler.h  core_module.cpp  image_module.cpp  image_module.h  image_stub.cpp  iterator.h  lexer.cpp  lexer.h  main.cpp  map.cpp  map.h  math_module.cpp  modules.cpp  modules.h  opcode.h  parser.cpp  parser.h  range.h  raylib_module.cpp  source_loc.h  source_registry.cpp  source_registry.h  stdlib.cpp  stdlib.h  string_module.cpp  string_table.h  token.h  utf8.h  value.h  vm.cpp  vm.h  wasm_main.cpp  (+1 more)
src/collections/: array.cpp  array.h  iterator.h  map.cpp  map.h  range.h
src/modules/: array_module.cpp  array_module.h  camera_module.cpp  camera_module.h  camera_stub.cpp  color_module.cpp  core_module.cpp  data_module.cpp  data_module.h  graphics3d.cpp  graphics_internal.h  graphics_module.cpp  graphics_quat.cpp  graphics_quat.h  graphics_stub.cpp  image_module.cpp  image_module.h  image_stub.cpp  keyboard_module.cpp  keyboard_module.h  math_module.cpp  module_utils.h  modules.cpp  modules.h  mouse_module.cpp  mouse_module.h  raylib_module.cpp  string_module.cpp  window_module.cpp
tau-vscode/: package.json
tau-vscode/syntaxes/: tau.tmLanguage.json
tests/: check_naming.sh  regressions.ol  run.sh  syntax.ol  test_errors.sh  utils_test.ol  utils_test2.ol
tools/: cm-entry.js  native-gfx.sh  run-headless.sh  update_build_date.py
tools/ollin-vscode/: package.json
tools/ollin-vscode/syntaxes/: ollin.tmLanguage.json
wasm/: build.sh
